# SEE

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  pyproject.toml  refer_info.md  requirements.txt
analyse/: Data Analysis(Lee2019_and_Human_M1_10x).ipynb  Data Analysis(PDGFRA).ipynb  Landmark position-ABCB1.ipynb  Landmark position-PDGFRA-Copy1.ipynb  Landmark position-PDGFRA-Copy2.ipynb  Landmark position-PDGFRA.ipynb  Mapping Figure.ipynb  PDGFRA-Copy1.ipynb  PDGFRA-Copy2.ipynb  PDGFRA-OPC_ODC.ipynb  PDGFRA.ipynb  RandomAnalysis.ipynb  Untitled.ipynb  analyse_util.py  case.ipynb
scHiC_analyse/: Untitled.ipynb  reconstruction.py
scce/: data.py  integrate.py  plot.py  preprocess.py  utils.py
script(HiRES)/: 0. pairs2cool.sh  1. scHiC data preprocess(coolers2anndata).ipynb  2. scRNA data preprocess.ipynb  3. Glue data preprocess-Copy1.ipynb  3. Glue data preprocess.ipynb  4. Glue model train-Copy1.ipynb  4. Glue model train.ipynb  5. Mapping-Copy1.ipynb  5. Mapping.ipynb  6. marker gene catch.ipynb  7. create train dataset.py
script(Lee2019)/: 1. scHiC data preprocess(coolers2anndata).ipynb  3. Glue data preprocess.ipynb  4. Glue model train.ipynb  5. Mapping.ipynb  6. marker gene catch.ipynb  7. create train dataset(Mb).py  7. create train dataset(random locations & hk).py  7. create train dataset(terminator).py
script(Tan2021)/: 1. scHiC data preprocess(hic2anndata).ipynb  2. scRNA data preprocess.ipynb  3. Glue data preprocess.ipynb  4. Glue model train.ipynb  5. Mapping.ipynb  6. marker gene catch.ipynb  7. create train dataset.py  (+1 more)
(+1519 files in other folders)
